--- a/01 - Javascript Drum Kit/style.css
+++ b/01 - Javascript Drum Kit/style.css
@@ -19,7 +19,7 @@ html {
     border-radius: .5rem;
     color: #fff;
     display: inline-block;
-    font-size: 1.5rem;
+    font-size: 3rem;
     margin: 0px 5px;
     padding: 4px 0;
     text-align: center;
@@ -33,4 +33,8 @@ html {
     border: 2px solid yellow;
     cursor: pointer;
     transform: scale(1.1);
+}
+
+span {
+    line-height: 50px;
 }
